--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -7,8 +7,9 @@ jobs:
     runs-on: windows-latest
     steps:
       -  name: gimmepath
-         run: echo %PATH%
-         shell: cmd
+      -  run: echo %PATH%
+      -  run: java -version
+         #shell: cmd
     
     
   
