--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -6,7 +6,7 @@ jobs:
   run-file:
     runs-on: windows-latest
     steps:
-      -  name: gimmepath
+      #-  name: gimmepath
       -  run: echo %PATH%
       -  run: java -version
          #shell: cmd
