--- a/.github/workflows/execute-simplecalc.yml
+++ b/.github/workflows/execute-simplecalc.yml
@@ -6,4 +6,5 @@ jobs:
   run-file:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v3
       - run: java -jar simplecalc.jar
