--- a/.github/workflows/execute-simplecalc.yml
+++ b/.github/workflows/execute-simplecalc.yml
@@ -7,4 +7,8 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
       - run: java -jar simplecalc.jar
