--- a/.github/workflows/execute-simplecalc.yml
+++ b/.github/workflows/execute-simplecalc.yml
@@ -12,3 +12,4 @@ jobs:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
       - run: java -jar simplecalc.jar
+        timeout-minutes: 2
