--- a/.github/workflows/execute-simplecalc.yml
+++ b/.github/workflows/execute-simplecalc.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
-      - run: java -jar simplecalc.jar
-        timeout-minutes: 2
+      #- run: java -jar simplecalc.jar
+      #  timeout-minutes: 2
       - run: calc\calc.exe
         timeout-minutes: 2
