--- a/.github/workflows/execute-simplecalc.yml
+++ b/.github/workflows/execute-simplecalc.yml
@@ -13,5 +13,5 @@ jobs:
           java-version: '17'
       #- run: java -jar simplecalc.jar
       #  timeout-minutes: 2
-      - run: calc\calc.exe
+      - run: calc/calc.exe
         timeout-minutes: 2
