--- a/.github/workflows/qfs-run.yml
+++ b/.github/workflows/qfs-run.yml
@@ -10,6 +10,6 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: QF-Test/qftest-6.0.3/bin/qftestc.exe -batch -nomessagewindow -run QF-Test/qftest-6.0.3/demo/carconfig/carconfig_de.qft
+      - run: QF-Test/qftest-6.0.3/bin/qftestc.exe -batch -nomessagewindow -run QF-Test/qftest-6.0.3/demo/carconfig/carconfig_de.qft -variable buggyMode=false -verbose
         timeout-minutes: 5
 
