--- a/.github/workflows/qfs-run.yml
+++ b/.github/workflows/qfs-run.yml
@@ -10,6 +10,6 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: QF-Test/qftest-6.0.3/bin/qftestc.exe -batch -nomessagewindow -verbose -variable buggyMode=false -run QF-Test/qftest-6.0.3/demo/carconfig/carconfig_de.qft
+      - run: QF-Test/qftest-6.0.3/bin/qftestc.exe -batch -nomessagewindow -verbose -variable buggyMode=true -run QF-Test/qftest-6.0.3/demo/carconfig/carconfig_de.qft
         timeout-minutes: 5
 
