--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       #-  name: gimmepath
       -  run: echo %PATH%
+      -  run: echo %JAVA_HOME%
       -  run: java -version
          #shell: cmd
     
