--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -10,6 +10,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '16'
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       -  run: echo %PATH%
       -  run: echo %JAVA_HOME%
       -  run: where java
