--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -5,15 +5,21 @@ on: workflow_dispatch
 jobs:
   run-file:
     runs-on: windows-latest
+    #env:
+      #INSTALL4J_JAVA_HOME: %JAVA_HOME%
     steps:
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
+      
+      -  run: SETX INSTALL4J_JAVA_HOME %JAVA_HOME%
+      
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '16'
+      
       -  run: echo %PATH%
       -  run: echo %JAVA_HOME%
       -  run: where java
