--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -12,16 +12,14 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '11'
-      
       -  run: SETX INSTALL4J_JAVA_HOME %JAVA_HOME%
-      
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '16'
-      
       -  run: echo %PATH%
       -  run: echo %JAVA_HOME%
+      -  run: echo %INSTALL4J_JAVA_HOME%
       -  run: where java
       -  run: java -version
          #shell: cmd
