--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -8,6 +8,7 @@ jobs:
     #env:
       #INSTALL4J_JAVA_HOME: %JAVA_HOME%
     steps:
+      - shell: cmd
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -22,7 +23,7 @@ jobs:
       -  run: echo %INSTALL4J_JAVA_HOME%
       -  run: where java
       -  run: java -version
-         #shell: cmd
+         
     
     
   
