--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -8,7 +8,7 @@ jobs:
     #env:
       #INSTALL4J_JAVA_HOME: %JAVA_HOME%
     steps:
-      - shell: cmd
+      #- shell: cmd
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
