--- a/.github/workflows/second-one.yml
+++ b/.github/workflows/second-one.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '11'
-      -  run: SETX INSTALL4J_JAVA_HOME %JAVA_HOME%
+      #- run: SETX INSTALL4J_JAVA_HOME %JAVA_HOME%
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
