--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,34 +15,34 @@ jobs:
           java-version: '16'
       - run: echo %JAVA_HOME%
   
-  Build:
+  #Build:
   
   
-  Results:
+  #Results:
   
   
-  Packaging:
+  #Packaging:
   
   
-  DockerBuildServer:
+  #DockerBuildServer:
   
   
-  DockerBuildDesigner:
+  #DockerBuildDesigner:
   
   
-  DockerBuildProjectDeploy:
+  #DockerBuildProjectDeploy:
   
   
-  DockerCleanup:
+  #DockerCleanup:
   
   
-  ReleaseNotes:
+  #ReleaseNotes:
   
   
-  Deploy:
+  #Deploy:
   
   
-  Feed:
+  #Feed:
   
   
  
