--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
           distribution: 'temurin'
           java-version: '16'
       - run: echo %JAVA_HOME%
+      - run: mvn -v
   
   #Build:
   
