--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '16'
+      - run: java -version
       - run: echo %JAVA_HOME%
       - run: mvn -v
+      - run: echo %MAVEN_HOME%
   
   #Build:
   
