--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: ./js
+        uses: 2Akuma2/test1/js@main
         with:
           who-to-greet: 'Mona the Octocat'
       # Use the output from the `hello` step
