--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,9 @@
-on: [push]
+on:
+  workflow_dispatch:
+    inputs:
+      paramTag:
+        description: 'param tag'
+        required: true
 
 jobs:
   hello_world_job:
@@ -10,6 +15,7 @@ jobs:
         uses: 2Akuma2/test1/js@main
         with:
           who-to-greet: 'Mona the Octocat'
+          paramTag: ${ paramTag }
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.timee }}"
