--- a/js/action.yml
+++ b/js/action.yml
@@ -5,9 +5,14 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
+  paramTag:
+    description: 'param tag'
+    required: true
 outputs:
   timee: # id of output
     description: 'The time we greeted you'
+  resolvedParamTag:
+    description: 'resolved param tag'
 runs:
   using: 'node16'
   main: 'index.js'
