--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,5 @@ jobs:
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.timee }}"
+      - name: Get resolved param tag
+        run: echo "The resolved param tag is ${{ steps.hello.outputs.resolvedParamTag }}"
