--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: 2Akuma2/test1/js@main
         with:
           who-to-greet: 'Mona the Octocat'
-          paramTag: ${{ INPUT_PARAMTAG }}
+          paramTag: ${{ inputs.paramTag }}
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.timee }}"
