--- a/js/action.yml
+++ b/js/action.yml
@@ -13,6 +13,8 @@ outputs:
     description: 'The time we greeted you'
   resolvedParamTag:
     description: 'resolved param tag'
+env:
+  sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
 runs:
   using: 'node16'
   main: 'index.js'
