--- a/js/action.yml
+++ b/js/action.yml
@@ -15,6 +15,7 @@ outputs:
     description: 'resolved param tag'
 env:
   sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
+  ADITO_DESIGNER_REPO_URL_SSH: ${{ secrets.ADITO_DESIGNER_REPO_URL_SSH }}
 runs:
   using: 'node16'
   main: 'index.js'
