--- a/js/action.yml
+++ b/js/action.yml
@@ -13,9 +13,9 @@ outputs:
     description: 'The time we greeted you'
   resolvedParamTag:
     description: 'resolved param tag'
-//env:
-  //sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
-  //ADITO_DESIGNER_REPO_URL_SSH: ${{ secrets.ADITO_DESIGNER_REPO_URL_SSH }}
+#env:
+  #sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
+  #ADITO_DESIGNER_REPO_URL_SSH: ${{ secrets.ADITO_DESIGNER_REPO_URL_SSH }}
 runs:
   using: 'node16'
   main: 'index.js'
