--- a/js/action.yml
+++ b/js/action.yml
@@ -16,6 +16,8 @@ outputs:
 #env:
   #sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
   #ADITO_DESIGNER_REPO_URL_SSH: ${{ secrets.ADITO_DESIGNER_REPO_URL_SSH }}
+  #MAVEN_SETTINGS: ${{ secrets.MAVEN_SETTINGS }}
+  #MAVEN_TOOLCHAINS: ${{ secrets.MAVEN_TOOLCHAINS }}
 runs:
   using: 'node16'
   main: 'index.js'
