--- a/js/action.yml
+++ b/js/action.yml
@@ -11,7 +11,7 @@ inputs:
 outputs:
   timee: # id of output
     description: 'The time we greeted you'
-  resolvedParamTag:
+  fullVersion:
     description: 'resolved param tag'
 #env:
   #sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
