--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.timee }}"
       - name: Get resolved param tag
-        run: echo "The resolved param tag is ${{ steps.hello.outputs.resolvedParamTag }}"
+        run: echo "The resolved param tag is ${{ steps.hello.outputs.fullVersion }}"
