--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,5 @@ jobs:
         run: echo "The time was ${{ steps.hello.outputs.timee }}"
       - name: Get resolved param tag
         run: echo "The resolved param tag is ${{ steps.hello.outputs.fullVersion }}"
+      - name: Get java version in main.yml
+        run: java -version
