--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: build working designer
     steps:
+      - uses: actions/checkout@v3
       - name: javascript action step
         id: hello
         uses: 2Akuma2/test1/js@main
