--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     name: build working designer
     steps:
-      - name: checkout designer // to /home/runner/work/test1/test1
+      - name: checkout designer    // to /home/runner/work/test1/test1 || lfs argument default false?
         uses: actions/checkout@v3
       - name: javascript action step
         id: hello
