--- a/js/action.yml
+++ b/js/action.yml
@@ -15,6 +15,7 @@ outputs:
     description: 'resolved param tag'
 #env:
   #sshUserPrivateKey:  ${{ secrets.sshUserPrivateKey }}
+  #ADITOONLINE_URL_SSH: ${{ secrets.ADITOONLINE_URL_SSH }}
   #ADITO_DESIGNER_REPO_URL_SSH: ${{ secrets.ADITO_DESIGNER_REPO_URL_SSH }}
   #MAVEN_SETTINGS: ${{ secrets.MAVEN_SETTINGS }}
   #MAVEN_TOOLCHAINS: ${{ secrets.MAVEN_TOOLCHAINS }}
