--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     name: build working designer
     steps:
+      - name: JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: 13
+          distribution: 'adopt'
       - name: checkout designer    // to /home/runner/work/test1/test1 || lfs argument default false?
         uses: actions/checkout@v3
       - name: javascript action step
