--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,15 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest      # matrix os later to run on all os
     name: build working designer
     steps:
-        # checkout ao repo
+      - name: checkout ao repo
+        uses: actions/checkout@v3
+        #with:
+          
+            
+      - name: move ao files to ao folder
         # move all files in current directory (/home/runner/work/test1/test1) to new directory /home/runner/work/test1/ao
         
       - name: checkout designer    # to /home/runner/work/test1/test1 || lfs argument default false?
