--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
           
             
       - name: move ao files to ao folder
-        # move all files in current directory (/home/runner/work/test1/test1) to new directory /home/runner/work/test1/ao
+        shell: bash
+        run: mv /home/runner/work/test1/test1 /home/runner/work/test1/ao
+        # rename test1 to ao
         
       - name: checkout designer    # to /home/runner/work/test1/test1 || lfs argument default false?
         uses: actions/checkout@v3
