--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/checkout@v3
         #with:
           
-            
       - name: move ao files to ao folder
         shell: bash
         run: |
           mv /home/runner/work/test1/test1 /home/runner/work/test1/ao
           mkdir /home/runner/work/test1/test1
+          env
         # rename test1 to ao
         
       - name: checkout designer    # to /home/runner/work/test1/test1 || lfs argument default false?
