--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           mv /home/runner/work/test1/test1 /home/runner/work/test1/ao
           mkdir /home/runner/work/test1/test1
-          env
+          echo $JAVA_HOME
         # rename test1 to ao
         
       - name: checkout designer    # to /home/runner/work/test1/test1 || lfs argument default false?
