--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           mv /home/runner/work/test1/test1 /home/runner/work/test1/ao
           mkdir /home/runner/work/test1/test1
           echo $JAVA_HOME
+          echo $HOME
         # rename test1 to ao
         
       - name: checkout designer    # to /home/runner/work/test1/test1 || lfs argument default false?
