--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,15 @@ jobs:
       - name: move ao files to ao folder
         shell: bash
         run: |
+          echo move ao files to ao folder:       # rename test1 to ao
           mv /home/runner/work/test1/test1 /home/runner/work/test1/ao
+          echo create designer folder:
           mkdir /home/runner/work/test1/test1
+          echo JAVA_HOME:
           echo $JAVA_HOME
+          echo HOME:
           echo $HOME
-        # rename test1 to ao
+        
         
       - name: checkout designer    # to /home/runner/work/test1/test1 || lfs argument default false?
         uses: actions/checkout@v3
