--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/checkout@v3
         #with:
         
-      - name: move ao files to ao folder
+      - name: move ao files to ao folder    # rename test1 to ao
         shell: bash
         run: |
-          echo move ao files to ao folder:       # rename test1 to ao
+          echo move ao files to ao folder:       
           mv /home/runner/work/test1/test1 /home/runner/work/test1/ao
           echo create designer folder:
           mkdir /home/runner/work/test1/test1
