--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,8 @@ jobs:
       - name: move ao files to ao folder    # rename test1 to ao
         shell: bash
         run: |
-          cd library/core/target/classes/de/adito/aditoweb/core/version
+          echo print out aditoVersion.properties
+          cd $HOME/work/test1/ao/library/core/target/classes/de/adito/aditoweb/core/version
           cat aditoVersion.properties
         
       # Use the output from the `js action` step
