--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,9 @@ jobs:
           echo print out aditoVersion.properties
           cd $HOME/work/test1/ao/library/core/target/classes/de/adito/aditoweb/core/version
           cat aditoVersion.properties
+          echo print out aditoDesigner.conf
+          cd $HOME/work/test1/ao/addendum/assemblydesigner/buildresources
+          cat ADITOdesigner.conf
         
       # Use the output from the `js action` step
       - name: Get the output time
