--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           paramTag: ${{ inputs.paramTag }}
         
         
-      - name: move ao files to ao folder    # rename test1 to ao
+      - name: print out aditoVersion.properties & aditoDesigner.conf to check if replacement was correct
         shell: bash
         run: |
           echo print out aditoVersion.properties
