--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,8 @@ jobs:
       if: runner.os == 'Windows'
       shell: bash
       run:  |
-        sed -i 's/\${installer:adito.installer.scaleui}/${{ scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-        sed -i 's/\${adito.complete.final.version}/${{ fullVersion }}/g' QF-Test/ADITOdesigner.conf
+        sed -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
+        sed -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
         sed -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
         sed -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
         sed -i 's/\${installer:adito.installer.basepath}/${{ github.workspace }}/g' QF-Test/ADITOdesigner.conf
@@ -42,30 +42,30 @@ jobs:
       if: runner.os == 'Linux'
       shell: bash
       run:  |
-        sed -i 's/\${installer:adito.installer.scaleui}/${{ scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-        sed -i 's/\${adito.complete.final.version}/${{ fullVersion }}/g' QF-Test/ADITOdesigner.conf
+        sed -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuilin }}/g' QF-Test/ADITOdesigner.conf
+        sed -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
         sed -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
         sed -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
         sed -i 's/\${installer:adito.installer.basepath}/${{ github.workspace }}/g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
       env:
-        scaleuiwin: ''
+        scaleuilin: ''
         fullVersion: '1234.5.6.7'
         
     - name: mac
       if: runner.os == 'macOS'
       shell: bash
       run:  |
-        sed -i 's/\${installer:adito.installer.scaleui}/${{ scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-        sed -i 's/\${adito.complete.final.version}/${{ fullVersion }}/g' QF-Test/ADITOdesigner.conf
-        sed -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
-        sed -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
-        sed -i 's/\${installer:adito.installer.basepath}/${{ github.workspace }}/g' QF-Test/ADITOdesigner.conf
+        sed -i '' 's/\${installer:adito.installer.scaleui}/${{ env.scaleuimac }}/g' QF-Test/ADITOdesigner.conf
+        sed -i '' 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
+        sed -i '' 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
+        sed -i '' 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
+        sed -i '' 's/\${installer:adito.installer.basepath}/${{ github.workspace }}/g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
       env:
-        scaleuiwin: ''
+        scaleuimac: ''
         fullVersion: '1234.5.6.7'
       
       
