--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,11 @@ jobs:
     - name: checkout ao repo
       uses: actions/checkout@v3
     
+    - name: JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: 13
+        distribution: 'adopt'
     
     
     
