--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,11 +32,12 @@ jobs:
       if: runner.os == 'Windows'
       shell: bash
       run:  |
-        sed -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-        sed -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
-        sed -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
-        sed -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
-        sed -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
+        echo ${{ github.workspace }}
+        sed -r -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
       env:
