--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,14 +28,52 @@ jobs:
     
     
     
+#    - name: win
+#      if: runner.os == 'Windows'
+#      shell: bash
+#      run:  |
+#        echo ${{ github.workspace }}
+#        sed -r -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
+#        sed -r -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
+#        sed -r -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
+#        sed -r -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
+#        sed -r -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
+#        mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
+#        cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
+#      env:
+#        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
+#        fullVersion: '1234.5.6.7'
+        
+    
     - name: win
       if: runner.os == 'Windows'
       shell: bash
       run:  |
         echo ${{ github.workspace }}
         sed -r -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
+      env:
+        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
+        fullVersion: '1234.5.6.7'
+    
+    
+    
+    
+    - name: win
+      if: runner.os == 'Windows'
+      shell: bash
+      run:  |
         sed -r -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
         sed -r -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
+        
+      env:
+        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
+        fullVersion: '1234.5.6.7'
+    
+    
+    - name: win
+      if: runner.os == 'Windows'
+      shell: bash
+      run:  |
         sed -r -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
         sed -r -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
@@ -43,7 +81,32 @@ jobs:
       env:
         scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
         fullVersion: '1234.5.6.7'
-        
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     - name: lin
       if: runner.os == 'Linux'
       shell: bash
