--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,80 +28,36 @@ jobs:
     
     
     
-#    - name: win
-#      if: runner.os == 'Windows'
-#      shell: bash
-#      run:  |
-#        echo ${{ github.workspace }}
-#        sed -r -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
-#        mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
-#        cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
-#      env:
-#        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
-#        fullVersion: '1234.5.6.7'
-        
-    
     - name: win
       if: runner.os == 'Windows'
       shell: bash
       run:  |
         echo ${{ github.workspace }}
-        sed -r -i 's/${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-        cat QF-Test/ADITOdesigner.conf
-      env:
-        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
-        fullVersion: '1234.5.6.7'
-    
-    
-    
-    
-    - name: win
-      if: runner.os == 'Windows'
-      shell: bash
-      run:  |
-        sed -r -i 's/$\{adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
         sed -r -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
-        
-      env:
-        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
-        fullVersion: '1234.5.6.7'
-    
-    
-    - name: win
-      if: runner.os == 'Windows'
-      shell: bash
-      run:  |
-        sed -r -i 's!$\{installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
-        sed -r -i 's!$\{installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
+        sed -r -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
       env:
         scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
         fullVersion: '1234.5.6.7'
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+      
+    - name: win powershell            # check if github.workspace ends with \ or not .... and add cat for safety
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: (Get-Content QF-Test\ADITOdesigner.conf) | % {
+             $_ -replace '${installer:adito.installer.scaleui}', '${{ env.scaleuiwin }}' `
+                -replace '${adito.complete.final.version}', '${{ env.fullVersion }}' `
+                -replace 'jdkhome="jre"', '${{ env.JAVA_HOME }}' `
+                -replace '${installer:adito.installer.basepath}/lib/designer', '${{ github.workspace }}/application/designer/target/aditodesigner' `
+                -replace '${installer:adito.installer.basepath}', '${{ github.workspace }}' `
+             } | Set-Content QF-Test\ADITOdesigner.conf; `
+             Move-Item -Path ${{ github.workspace }}\QF-Test/ADITOdesigner.conf -Destination ${{ github.workspace }}\application\designer\target\aditodesigner\etc
+      env:
+        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
+        fullVersion: '1234.5.6.7'
     
     
     
