--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,15 +4,15 @@ on:
 
 jobs:
   test_job:
-    runs-on: windows-latest                    #${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     name: build working designer
-    #strategy:
-      #fail-fast: false
-      #matrix:
-      #  include:
-      #    - os: macos-latest
-      #    - os: ubuntu-latest
-      #    - os: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-latest
+          - os: ubuntu-latest
+          - os: windows-latest
     steps:
     
     - name: checkout ao repo
@@ -27,23 +27,6 @@ jobs:
     
     
     
-    
-#    - name: win
-#      if: runner.os == 'Windows'
-#      shell: bash
-#      run:  |
-#        echo ${{ github.workspace }}
-#        sed -r -i 's/\${installer:adito.installer.scaleui}/${{ env.scaleuiwin }}/g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's/\${adito.complete.final.version}/${{ env.fullVersion }}/g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's!jdkhome="jre"!jdkhome="${{ env.JAVA_HOME }}"!g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
-#        sed -r -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
-#        mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
-#        cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
-#      env:
-#        scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
-#        fullVersion: '1234.5.6.7'
-      
     - name: win powershell            # check if github.workspace ends with \ or not
       if: runner.os == 'Windows'
       shell: pwsh
@@ -61,10 +44,6 @@ jobs:
         fullVersion: '1234.5.6.7'
     
     
-    
-    
-    
-    
     - name: lin
       if: runner.os == 'Linux'
       shell: bash
@@ -79,7 +58,8 @@ jobs:
       env:
         scaleuilin: ''
         fullVersion: '1234.5.6.7'
-        
+    
+    
     - name: mac
       if: runner.os == 'macOS'
       shell: bash
@@ -94,6 +74,7 @@ jobs:
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
-      
-      
-      
+    
+    
+    
+    
