--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     
     
     
-    - name: win powershell            # check if github.workspace ends with \ or not
+    - name: win
       if: runner.os == 'Windows'
       shell: pwsh
       run: (Get-Content QF-Test\ADITOdesigner.conf) | % {
