--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     
     
     
-    - name: win
+    - name: ADITOdesigner.conf (win)
       if: runner.os == 'Windows'
       shell: pwsh
       run: (Get-Content QF-Test\ADITOdesigner.conf) | % {
@@ -44,7 +44,7 @@ jobs:
         fullVersion: '1234.5.6.7'
     
     
-    - name: lin
+    - name: ADITOdesigner.conf (lin)
       if: runner.os == 'Linux'
       shell: bash
       run:  |
@@ -60,7 +60,8 @@ jobs:
         fullVersion: '1234.5.6.7'
     
     
-    - name: mac
+    # does max need scaleui? currently empty
+    - name: ADITOdesigner.conf (mac) 
       if: runner.os == 'macOS'
       shell: bash
       run:  |
