--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   test_job:
     runs-on: ${{ matrix.os }}
-    name: build working designer
+    name: test it!
     strategy:
       fail-fast: false
       matrix:
