--- a/.github/workflows/uitest-action/build.yml
+++ b/.github/workflows/uitest-action/build.yml
@@ -1,4 +1,4 @@
-// gets added to designer-ci build.yml
+// add to designer-ci build.yml
 // https://github.com/aditosoftware/adito-designer-ci/blob/main/.github/workflows/build.yml
 
 // add the following step before the cache step to change windows cache compression algorithm from gzip to zstd to enable cross caching 
