--- a/.github/workflows/uitest-action/action.yml
+++ b/.github/workflows/uitest-action/action.yml
@@ -1,5 +1,5 @@
 name: "Execute UI Tests"
-description: "Executes all unit tests found in this project"
+description: "Executes all ui tests"
 inputs:
   nexus_user:
     description: 'Nexus Username'
