--- a/.github/workflows/uitest-action/action.yml
+++ b/.github/workflows/uitest-action/action.yml
@@ -42,7 +42,7 @@ runs:
       if: runner.os == 'macOS'
       working-directory: ./QF-Test
       shell: bash
-      run: curl -o qftest.dmg 'http://www.cyberciti.biz/files/mastering-vi-vim.pdf'
+      run: curl -o qftest.dmg 'https://www.qfs.de/fileadmin/Webdata/pub/qftest/QF-Test-6.0.4.dmg'
     
 ####
     
